# routes/auth.js
@@ -6,8 +6,9 @@ const config = require('./../config');
 const errors = require('./../utils/dz-errors');
 const express = require('express');
 const router = express.Router();
-const authHandler = require('./../model_handlers/auth-handler');
 const labels = require('./../utils/labels.json')
+const authHandler = require('./../model_handlers/auth-handler');
+const encryptDecryptHandler = require('./../model_handlers/encrypt-decrypt-handler');
 
 router.post('/login', async(req, res) => {
     try {
@@ -17,6 +18,62 @@ router.post('/login', async(req, res) => {
         }
         let response = await authHandler.login(req.body);
         jsonResponse(res, responseCodes.OK, null, response);
+    } catch (error) {
+        jsonResponse(res, error.code, error, null);
+    }
+});
+
+// API
+
+router.post('/signup', async(req, res) => {
+    try {
+        if (!req.body.name || !req.body.mobile_country_code || !req.body.mobile || !req.body.email || !req.body.region_id || !req.body.password || !req.body.username || !req.files.profile_photo) {
+            jsonResponse(res, responseCodes.BadRequest, errors(labels.LBL_MISSING_PARAMETERS[config.default_language], responseCodes.BadRequest), null)
+            return
+        }
+        let response = await authHandler.signup(req.body);
+        jsonResponse(res, responseCodes.OK, null, await encryptDecryptHandler.encrypt(response));
+    } catch (error) {
+        jsonResponse(res, error.code, error, null);
+    }
+});
+
+router.post('/update', async(req, res) => {
+    try {
+        if (!req.body.user_id) {
+            jsonResponse(res, responseCodes.BadRequest, errors(labels.LBL_MISSING_PARAMETERS[config.default_language], responseCodes.BadRequest), null)
+            return
+        }
+        let response = await authHandler.update(req.body);
+        jsonResponse(res, responseCodes.OK, null, await encryptDecryptHandler.encrypt(response));
+    } catch (error) {
+        jsonResponse(res, error.code, error, null);
+    }
+});
+
+router.get('/get-profile', async(req, res) => {
+    try {
+        req.query = await encryptDecryptHandler.decryptJson(req.query.encrypt_data)
+        if (!req.query.user_id) {
+            jsonResponse(res, responseCodes.BadRequest, errors(labels.LBL_MISSING_PARAMETERS[config.default_language], responseCodes.BadRequest), null)
+            return
+        }
+        let response = await authHandler.profile(req.query);
+        jsonResponse(res, responseCodes.OK, null, await encryptDecryptHandler.encrypt(response));
+    } catch (error) {
+        jsonResponse(res, error.code, error, null);
+    }
+});
+
+router.post('/signin', async(req, res) => {
+    try {
+        req.body = await encryptDecryptHandler.decryptJson(req.body.encrypt_data)
+        if (!req.body.mobile_country_code || !req.body.mobile || !req.body.password) {
+            jsonResponse(res, responseCodes.BadRequest, errors(labels.LBL_MISSING_PARAMETERS[config.default_language], responseCodes.BadRequest), null)
+            return
+        }
+        let response = await authHandler.signin(req.body);
+        jsonResponse(res, responseCodes.OK, null, await encryptDecryptHandler.encrypt(response));
     } catch (error) {
         jsonResponse(res, error.code, error, null);
     }
