# routes/region.js
@@ -2,9 +2,13 @@
 
 const responseCodes = require('./../utils/response-codes');
 const jsonResponse = require('./../utils/json-response');
+const config = require('./../config');
+const errors = require('./../utils/dz-errors');
 const express = require('express');
 const router = express.Router();
+const labels = require('./../utils/labels.json')
 const regionHandler = require('./../model_handlers/region-handler');
+const encryptDecryptHandler = require('./../model_handlers/encrypt-decrypt-handler');
 
 router.post('/create', async(req, res) => {
     try {
@@ -46,6 +50,18 @@ router.post('/update', async(req, res) => {
     try {
         let response = await regionHandler.update(req.body);
         jsonResponse(res, responseCodes.OK, null, response);
+    } catch (error) {
+        jsonResponse(res, error.code, error, null);
+    }
+});
+
+// API
+router.get('/region-list', async(req, res) => {
+    try {
+        req.query = await encryptDecryptHandler.decryptJson(req.query.encrypt_data)
+        req.query.status = 'active'
+        let response = await regionHandler.get(req.query);
+        jsonResponse(res, responseCodes.OK, null, await encryptDecryptHandler.encrypt(response));
     } catch (error) {
         jsonResponse(res, error.code, error, null);
     }
